--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="20221012" />
+    <meta name="keywords" content="computer" />
+    <base href="http://127.0.0.1:5500" />
+
     <title>LOL 메인화면</title>
+    <!-- 부트 스트랩 관련 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- js참조 -->
+
     <style>
       .mainPage {
         position: relative;
@@ -50,10 +69,14 @@
         background-color: #d3bb8b;
         transition: all 0.3s ease;
       }
+      table {
+        font-size: 20pt;
+        color: white;
+      }
     </style>
   </head>
   <body style="background-color: black">
-    <div style="display: flex; justify-content: space-evenly">
+    <!-- <div style="display: flex; justify-content: space-evenly">
       <img
         style="justify-content: left"
         src="images/main_Page_Logo.jpeg"
@@ -71,14 +94,111 @@
         게임정보 | 새소식 | 챔피언 | 다운로드 | E스포츠 | 이벤트 | 알아보기 |
         라이엇 스토어
       </h3>
-    </div>
+    </div> -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"
+          ><img src="/images/main_Page_Logo.jpeg" width="100"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="http://127.0.0.1:5500/"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">게임소개</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">게시판</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">다운로드</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">외부 웹사이트</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Dropdown
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="https://download.kr.riotgames.com/league"
+                    >게임 다운로드</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="https://www.leagueoflegends.com/ko-kr/news/community/"
+                    >롤 커뮤니티</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="https://github.com/"
+                    >깃 허브 페이지</a
+                  >
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">더보기</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="검색어 입력"
+              aria-label="검색어 입력"
+            />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+          </form>
+        </div>
+      </div>
+    </nav>
     <div class="mainPage">
-      <video class="mainPage-video" autoplay loop playsinline>
-        <source
-          src="https://cmsassets.rgpub.io/sanity/files/dsfx7636/news/8ab3e227121c53aacab0c9b9f7a48adbc65db520.webm"
-          type="video/webm"
-        />
-      </video>
+      <a
+        href="https://www.leagueoflegends.com/ko-kr/how-to-play/"
+        target="_blank"
+      >
+        <video class="mainPage-video" autoplay loop playsinline>
+          <source
+            src="https://cmsassets.rgpub.io/sanity/files/dsfx7636/news/8ab3e227121c53aacab0c9b9f7a48adbc65db520.webm"
+            type="video/webm"
+          />
+        </video>
+      </a>
       <!-- <img src="images/main.jpg" width="1425px" -->
       <div class="mainPage-Container">
         <div class="mainPage_Content">
@@ -94,6 +214,38 @@
         </div>
       </div>
     </div>
+
+    <table class="table table-bordered table-primary" border="1">
+      <caption>
+        인기 캐릭터
+      </caption>
+      <tbody>
+        <tr bgcolor="red">
+          <td width="80">사이온</td>
+          <td>아리</td>
+          <td>가렌</td>
+          <td>가렌1</td>
+          <td>가렌2</td>
+        </tr>
+        <tr bgcolor="grey">
+          <td colspan="5">
+            <a href="https://www.leagueoflegends.com">롤 웹사이트 접속하기</a>
+          </td>
+        </tr>
+        <tr>
+          <td bgcolor="blue"><b>카직스</b></td>
+          <td>루시안</td>
+          <td>루시안2</td>
+          <td colspan="2">
+            <font size="13"
+              ><img src="/images/GgullBull.jpeg" width="50" height="50" />바이,
+              바이2</font
+            >
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
     <hr />
     <div style="display: flex; justify-content: center">
       <h5
