--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <!-- js참조 -->
     <script type="text/javascript" src="JS/Basic_js_test.js" defer></script>
     <script type="text/javascript" src="JS/search.js" defer></script>
+    <script type="text/javascript" src="JS/data_type.js" defer></script>
+    <script type="text/javascript" src="JS/popup.js" defer></script>
     <style>
       .mainPage {
         position: relative;
@@ -76,7 +78,7 @@
       }
     </style>
   </head>
-  <body style="background-color: black">
+  <body style="background-color: black" onload="pop_up();">
     <!-- <div style="display: flex; justify-content: space-evenly">
       <img
         style="justify-content: left"
@@ -99,7 +101,11 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
-          ><img src="/images/main_Page_Logo.jpeg" width="100"
+          ><img
+            src="/images/main_Page_Logo.jpeg"
+            width="100"
+            onmouseover="over(this)"
+            onmouseout="out(this)"
         /></a>
         <button
           class="navbar-toggler"
@@ -174,9 +180,11 @@
               <a class="nav-link disabled" aria-disabled="true">Disabled</a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
+          <form class="d-flex" role="search" onsubmit="return googleSearch()">
             <input
               class="form-control me-2"
+              id="search_input"
+              name="q"
               type="search"
               placeholder="검색어 입력"
               aria-label="검색어 입력"
