--- a/login/index_login.html
+++ b/login/index_login.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="computer" />
     <base href="http://127.0.0.1:5500" />
 
-    <title>LOL 메인화면</title>
+    <title>LOL 로그인 후 메인화면</title>
     <!-- 부트 스트랩 관련 -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="JS/Basic_js_test.js" defer></script>
     <script type="text/javascript" src="JS/search.js" defer></script>
     <script type="text/javascript" src="JS/data_type.js" defer></script>
-    <!-- <script type="text/javascript" src="JS/popup.js" defer></script> -->
+
     <style>
       .mainPage {
         position: relative;
@@ -198,10 +198,10 @@
             </button>
           </form>
           <a
-            href="login/login.html"
+            href="login/logout.html"
             class="btn btn-outline-success"
-            id="login_btn"
-            >로그인 하기</a
+            id="logout_btn"
+            >로그아웃 하기</a
           >
         </div>
       </div>
