9주차 진도, 응용문제, 연습문제 지난주 내용 살펴보기 완료

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="JS/Basic_js_test.js" defer></script>
     <script type="text/javascript" src="JS/search.js" defer></script>
     <script type="text/javascript" src="JS/data_type.js" defer></script>
-    <!-- <script type="text/javascript" src="JS/popup.js" defer></script> -->
+    <script type="text/javascript" src="JS/popup.js" defer></script>
     <style>
       .mainPage {
         position: relative;
