--- a/login/login.html
+++ b/login/login.html
@@ -12,6 +12,14 @@
       crossorigin="anonymous"
     />
 
+    <!-- DOMPurify 관련 -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.2.6/purify.min.js"
+      integrity="sha512-YlctBG9PGZIhh9keoqI3eZkQM9T8QUbiBi7qNYAO/TUEo8jqWX5pLp5+x1cKRQDRzJ/lyGyJ9WUVNIRduxIIFw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
     <title>로그인 화면</title>
     <!-- css 참조 -->
     <link rel="stylesheet" href="/css/login.css" />
