10주차 진도, 지난주 내용 살펴보기, 응용문제, 연습문제 완료

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       <!-- <img src="images/main.jpg" width="1425px" -->
       <div class="mainPage-Container">
         <div class="mainPage_Content">
-          <img src="/images/main_Page_Logo.webp" alt="" />
+          <img src="/images/main_Page_Logo.jpeg" alt="" />
           <a
             role="button"
             class="mainPage_Content_PlayBtn"
