--- a/login/logout.html
+++ b/login/logout.html
@@ -12,6 +12,10 @@
       crossorigin="anonymous"
     />
 
+    <!-- js 참조 -->
+    <script type="text/javascript" src="../JS/login.js" defer></script>
+    <script type="text/javascript" src="../JS/session.js" defer></script>
+
     <title>로그인 화면</title>
     <!-- css 참조 -->
     <link rel="stylesheet" href="/css/login.css" />
@@ -31,9 +35,8 @@
                       data-mdb-button-init
                       data-mdb-ripple-init
                       class="btn btn-outline-light btn-lg px-5"
-                      id="login_btn"
+                      id="logout_btn"
                       type="button"
-                      onclick="location.href='../index.html'"
                     >
                       로그아웃
                     </button>
