--- a/login/index_login.html
+++ b/login/index_login.html
@@ -221,7 +221,7 @@
       <!-- <img src="images/main.jpg" width="1425px" -->
       <div class="mainPage-Container">
         <div class="mainPage_Content">
-          <img src="/images/main_Page_Logo.webp" alt="" />
+          <img src="/images/main_Page_Logo.jpeg" alt="" />
           <a
             role="button"
             class="mainPage_Content_PlayBtn"
