--- a/login/index_login.html
+++ b/login/index_login.html
@@ -22,9 +22,23 @@
     ></script>
 
     <!-- js참조 -->
-    <script type="text/javascript" src="JS/Basic_js_test.js" defer></script>
-    <script type="text/javascript" src="JS/search.js" defer></script>
-    <script type="text/javascript" src="JS/data_type.js" defer></script>
+    <!-- <script type="text/javascript" src="../JS/Basic_js_test.js" defer></script> -->
+    <!-- <script type="text/javascript" src="../JS/data_type.js" defer></script> -->
+    <script type="text/javascript" src="../JS/search.js" defer></script>
+    <script type="text/javascript" src="../JS/login.js" defer></script>
+    <script type="text/javascript" src="../JS/session.js" defer></script>
+    <script type="text/javascript" src="../JS/crypto.js" defer></script>
+    <script type="text/javascript" src="../JS/crypto2.js" defer></script>
+    <script type="text/javascript" src="../JS/index_login.js" defer></script>
+    <script type="text/javascript" src="../JS/jwt_token.js" defer></script>
+
+    <!-- crypto-js 라이브러리 -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"
+      integrity="sha512-a+SUDuwNzXDvz4XrIcXHuCf089/iJAoN4lmrXJg18XnduKK6YlDHNRalv4yd1N40OKI80tFidF+rqTFKGPoWFQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
 
     <style>
       .mainPage {
@@ -78,26 +92,7 @@
       }
     </style>
   </head>
-  <body style="background-color: black" onload="pop_up();">
-    <!-- <div style="display: flex; justify-content: space-evenly">
-      <img
-        style="justify-content: left"
-        src="images/main_Page_Logo.jpeg"
-        width="160px
-      "
-      />
-      <h3
-        style="
-          font-size: 24px;
-          font-weight: bold;
-          font-style: italic;
-          color: white;
-        "
-      >
-        게임정보 | 새소식 | 챔피언 | 다운로드 | E스포츠 | 이벤트 | 알아보기 |
-        라이엇 스토어
-      </h3>
-    </div> -->
+  <body style="background-color: black" onload="checkAuth(); init_logined();">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
@@ -218,7 +213,6 @@
           />
         </video>
       </a>
-      <!-- <img src="images/main.jpg" width="1425px" -->
       <div class="mainPage-Container">
         <div class="mainPage_Content">
           <img src="/images/main_Page_Logo.jpeg" alt="" />
