--- a/login/login.html
+++ b/login/login.html
@@ -27,6 +27,17 @@
     <!-- js 참조 -->
     <script type="text/javascript" src="../JS/login.js" defer></script>
     <script type="text/javascript" src="../JS/session.js" defer></script>
+    <script type="text/javascript" src="../JS/crypto.js" defer></script>
+    <script type="text/javascript" src="../JS/crypto2.js" defer></script>
+    <script type="text/javascript" src="../JS/jwt_token.js" defer></script>
+
+    <!-- crypto-js 라이브러리 -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"
+      integrity="sha512-a+SUDuwNzXDvz4XrIcXHuCf089/iJAoN4lmrXJg18XnduKK6YlDHNRalv4yd1N40OKI80tFidF+rqTFKGPoWFQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
   </head>
   <body class="text-center" onload="init();">
     <section class="vh-100 gradient-custom">
