--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     ></script>
 
     <!-- js참조 -->
-    <script type="text/javascript" src="JS/Basic_js_test.js" defer></script>
+    <!-- <script type="text/javascript" src="JS/Basic_js_test.js" defer></script> -->
     <script type="text/javascript" src="JS/search.js" defer></script>
-    <script type="text/javascript" src="JS/data_type.js" defer></script>
+    <!-- <script type="text/javascript" src="JS/data_type.js" defer></script> -->
     <script type="text/javascript" src="JS/popup.js" defer></script>
     <style>
       .mainPage {
