--- a/login/index_login.html
+++ b/login/index_login.html
@@ -25,12 +25,12 @@
     <!-- <script type="text/javascript" src="../JS/Basic_js_test.js" defer></script> -->
     <!-- <script type="text/javascript" src="../JS/data_type.js" defer></script> -->
     <script type="text/javascript" src="../JS/search.js" defer></script>
-    <script type="text/javascript" src="../JS/login.js" defer></script>
-    <script type="text/javascript" src="../JS/session.js" defer></script>
-    <script type="text/javascript" src="../JS/crypto.js" defer></script>
+    <script type="module" src="../JS/login2.js" defer></script>
+    <!-- <script type="text/javascript" src="../JS/session.js" defer></script> -->
+    <!-- <script type="text/javascript" src="../JS/crypto.js" defer></script> -->
     <script type="text/javascript" src="../JS/crypto2.js" defer></script>
     <script type="text/javascript" src="../JS/index_login.js" defer></script>
-    <script type="text/javascript" src="../JS/jwt_token.js" defer></script>
+    <!-- <script type="text/javascript" src="../JS/jwt_token.js" defer></script> -->
 
     <!-- crypto-js 라이브러리 -->
     <script
@@ -92,7 +92,7 @@
       }
     </style>
   </head>
-  <body style="background-color: black" onload="checkAuth(); init_logined();">
+  <body style="background-color: black">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
@@ -127,7 +127,7 @@
               <a class="nav-link" href="#">게임소개</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">게시판</a>
+              <a class="nav-link" href="login/profile.html">마이페이지</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">다운로드</a>
