--- a/login/login.html
+++ b/login/login.html
@@ -25,11 +25,11 @@
     <link rel="stylesheet" href="/css/login.css" />
 
     <!-- js 참조 -->
-    <script type="text/javascript" src="../JS/login.js" defer></script>
-    <script type="text/javascript" src="../JS/session.js" defer></script>
+    <script type="module" src="../JS/login.js" defer></script>
+    <!-- <script type="text/javascript" src="../JS/session.js" defer></script>
     <script type="text/javascript" src="../JS/crypto.js" defer></script>
+    <script type="text/javascript" src="../JS/jwt_token.js" defer></script> -->
     <script type="text/javascript" src="../JS/crypto2.js" defer></script>
-    <script type="text/javascript" src="../JS/jwt_token.js" defer></script>
 
     <!-- crypto-js 라이브러리 -->
     <script
@@ -39,7 +39,7 @@
       referrerpolicy="no-referrer"
     ></script>
   </head>
-  <body class="text-center" onload="init();">
+  <body class="text-center">
     <section class="vh-100 gradient-custom">
       <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -133,7 +133,9 @@
                 <div>
                   <p class="mb-0">
                     아이디가 없으신가요??
-                    <a href="#!" class="text-white-50 fw-bold">회원가입</a>
+                    <a href="join.html" class="text-white-50 fw-bold"
+                      >회원가입</a
+                    >
                   </p>
                 </div>
               </div>
