--- a/login/logout.html
+++ b/login/logout.html
@@ -13,9 +13,9 @@
     />
 
     <!-- js 참조 -->
-    <script type="text/javascript" src="../JS/login.js" defer></script>
-    <script type="text/javascript" src="../JS/session.js" defer></script>
-    <script type="text/javascript" src="../JS/jwt_token.js" defer></script>
+    <script type="module" src="../JS/login.js" defer></script>
+    <!-- <script type="text/javascript" src="../JS/session.js" defer></script>
+    <script type="text/javascript" src="../JS/jwt_token.js" defer></script> -->
 
     <title>로그인 화면</title>
     <!-- css 참조 -->
